--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@remix-run/serve": "^2.9.2",
 		"@supabase/supabase-js": "^2.39.1",
 		"autoprefixer": "^10.4.16",
+		"bcrypt": "^5.1.1",
 		"cookie": "^0.6.0",
 		"i18next": "^23.7.11",
 		"i18next-browser-languagedetector": "^7.2.0",
@@ -55,6 +56,7 @@
 		"@testing-library/jest-dom": "^6.1.5",
 		"@testing-library/react": "^14.1.2",
 		"@testing-library/user-event": "^14.5.1",
+		"@types/bcrypt": "^5.0.2",
 		"@types/i18next-fs-backend": "^1.1.5",
 		"@types/react": "^18.2.45",
 		"@types/react-dom": "^18.2.18",
