--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"i18next-fs-backend": "^2.3.1",
 		"i18next-http-backend": "^2.4.2",
 		"isbot": "^3.7.1",
+		"node-libs-browser": "^2.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^13.5.0",
